# nightforge

./: .gitignore  .nightforge-publish-smoke  README.md  pyproject.toml
.github/: nightforge-labels.json
.github/ISSUE_TEMPLATE/: config.yml  rfc.yml  ticket.yml
.github/workflows/: proof-engine.yml
cloudflare/: package-lock.json  package.json  schema.sql  wrangler.toml
cloudflare/src/: worker.js
cloudflare/test/: ping.test.js  transition.test.js  worker.test.js
config/: repositories.json
docs/: 00-vision.md  01-governance.md  02-reciprocity.md  03-architecture-github.md  04-roadmap.md  05-design-review.md  06-aws-webhook.md  07-cloudflare-webhook.md
examples/: change.patch  ticket.json
infra/: template.yaml
schemas/: ledger-event.schema.json  rfc.schema.json  ticket.schema.json
src/nightforge/: __init__.py  cli.py  github.py  governance.py  lambda_handler.py  publish.py  server.py  webhook.py
tests/: test_cli.py  test_github.py  test_lambda_handler.py  test_publish.py  test_server.py  test_webhook.py
