[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nightforge"
version = "0.1.0"
description = "Local-first node CLI for the NightForge federation"
requires-python = ">=3.11"
dependencies = ["jsonschema[format]>=4.23"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
nightforge = "nightforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
